--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-torch==0.4.1.post2
+pytorch==1.0.1
+torch==0.4.1
 torchvision==0.2.1
+cudatoolkit==10.0.130
 opencv-python==3.4.2.17
 scikit-image==0.14.2
 scipy==1.1.0
