update supervisely data(ic15 format) train code

--- a/train_ic15data_v2.ini
+++ b/train_ic15data_v2.ini
@@ -8,9 +8,9 @@ cuda = True
 pretrain_model_path = ./pretrain/craft_mlt_25k.pth
 resume =
 train_ratio = 1
-batch_size = 3
+batch_size = 2
 learning_rate = 3.2768e-5
 momentum = 0.9
 weight_decay = 5e-4
 gamma = 0.1
-num_workers = 32
+num_workers = 0     ### 0보다 크면 멈춤
