--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -4,24 +4,24 @@ prefix = CRAFT-LEARN.
 folder = Log
 
 [GENERATE]
-img_path = ../data/CRAFT-pytorch/Light_SSen(top)/img/
-ann_path = ../data/CRAFT-pytorch/Light_SSen(top)/ann/
-gt_path = ../data/CRAFT-pytorch/Light_SSen(top)/gt/
+img_path = /HDD/mathflat_problems/0_9999/img/
+ann_path = /HDD/mathflat_problems/0_9999/ann/
+gt_path = /HDD/mathflat_problems/0_9999/gt/
 
 [SPLIT]
-img_path = ../data/CRAFT-pytorch/Light_SSen(top)/img/
-gt_path = ../data/CRAFT-pytorch/Light_SSen(top)/gt/
-train_path = ../data/CRAFT-pytorch/Light_SSen(top)/train/
-test_path = ../data/CRAFT-pytorch/Light_SSen(top)/test/
+img_path = /HDD/mathflat_problems/0_9999/img/
+gt_path = /HDD/mathflat_problems/0_9999/gt/
+train_path = /HDD/mathflat_problems/0_9999/train/
+test_path = /HDD/mathflat_problems/0_9999/test/
 percent_ratio = 80
 
 [TRAIN]
-train_img_path = ../data/CRAFT-pytorch/Light_SSen(top)/train/img/
-train_gt_path = ../data/CRAFT-pytorch/Light_SSen(top)/train/gt/
+train_img_path = /HDD/mathflat_problems/0_9999/train/img/
+train_gt_path = /HDD/mathflat_problems/0_9999/train/gt/
 pretrain_model_path = ../pretrain/craft_mlt_25k.pth
 cuda = True
 resume =
-batch_size = 2
+batch_size = 10
 learning_rate = 3.2768e-5
 momentum = 0.9
 weight_decay = 5e-4
@@ -31,6 +31,6 @@ model_root_path = ../pretrain/
 
 [TEST]
 pretrain_model_path = ./pretrain/craft_mlt_25k.pth
-test_img_path = ../data/CRAFT-pytorch/Light_SSen(top)/test/img/
-test_gt_path = ../data/CRAFT-pytorch/Light_SSen(top)/test/gt/
+test_img_path = /HDD/mathflat_problems/0_9999/test/img/
+test_gt_path = /HDD/mathflat_problems/0_9999/test/gt/
 model_root_path = ./pretrain/
