--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -33,4 +33,5 @@ model_root_path = ../pretrain/
 pretrain_model_path = ./pretrain/craft_mlt_25k.pth
 test_img_path = /HDD/mathflat_problems/0_9999/test/img/
 test_gt_path = /HDD/mathflat_problems/0_9999/test/gt/
+cuda = True
 model_root_path = ../pretrain/
