--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -4,20 +4,20 @@ prefix = CRAFT-LEARN.
 folder = Log
 
 [GENERATE]
-img_path = /HDD/mathflat_problems/0_9999/img/
-ann_path = /HDD/mathflat_problems/0_9999/ann/
-gt_path = /HDD/mathflat_problems/0_9999/gt/
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/img/
+ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/ann/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/gt/
 
 [SPLIT]
-img_path = /HDD/mathflat_problems/0_9999/img/
-gt_path = /HDD/mathflat_problems/0_9999/gt/
-train_path = /HDD/mathflat_problems/0_9999/train/
-test_path = /HDD/mathflat_problems/0_9999/test/
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/img/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/gt/
+train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/train/
+test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/test/
 percent_ratio = 80
 
 [TRAIN]
-train_img_path = /HDD/mathflat_problems/0_9999/train/img/
-train_gt_path = /HDD/mathflat_problems/0_9999/train/gt/
+train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/train/img/
+train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/train/gt/
 pretrain_model_path = ../pretrain/craft_mlt_25k.pth
 cuda = True
 resume =
@@ -30,8 +30,11 @@ num_workers = 0     ### 0보다 크면 멈춤
 model_root_path = ../pretrain/
 
 [TEST]
-pretrain_model_path = ./pretrain/craft_mlt_25k.pth
-test_img_path = /HDD/mathflat_problems/0_9999/test/img/
-test_gt_path = /HDD/mathflat_problems/0_9999/test/gt/
+pretrain_model_path = ../pretrain/craft_mlt_25k.pth
+dataset_type = mathflat
+# mathflat / ic15
+test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/test/img/
+test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/test/gt/
 cuda = True
 model_root_path = ../pretrain/
+rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/rst/
