--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,37 @@
-pytorch==1.0.1
-torch==0.4.1
-torchvision==0.2.1
-cudatoolkit==10.0.130
-opencv-python==3.4.2.17
-scikit-image==0.14.2
-scipy==1.1.0
-Polygon3
+certifi==2020.12.5
+cffi @ file:///tmp/build/80754af9/cffi_1598370789085/work
+cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
+coloredlogs @ file:///tmp/build/80754af9/coloredlogs_1598402368805/work
+cycler==0.10.0
+cytoolz==0.11.0
+dask @ file:///tmp/build/80754af9/dask-core_1611341281313/work
+dataclasses==0.8
+decorator @ file:///home/ktietz/src/ci/decorator_1611930055503/work
+future==0.18.2
+humanfriendly==8.2
+imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
+kiwisolver @ file:///tmp/build/80754af9/kiwisolver_1604014557000/work
+matplotlib @ file:///tmp/build/80754af9/matplotlib-base_1603373816490/work
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+networkx @ file:///tmp/build/80754af9/networkx_1598376031484/work
+numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1603487797006/work
+olefile==0.46
+Pillow @ file:///tmp/build/80754af9/pillow_1609786736246/work
+Polygon3==3.0.8
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
+python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+PyWavelets @ file:///tmp/build/80754af9/pywavelets_1601658315997/work
+PyYAML==5.4.1
+scikit-image==0.17.2
+scipy @ file:///tmp/build/80754af9/scipy_1597686625380/work
+six==1.15.0
+tifffile==2020.10.1
+toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
+torch==1.7.0+cu110
+torchaudio==0.7.0
+torchvision==0.8.1+cu110
+tornado @ file:///tmp/build/80754af9/tornado_1606942266872/work
+typing-extensions==3.7.4.3
