--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -6,6 +6,7 @@ folder = Log
 [GENERATE]
 img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/img/
 ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/ann/
+
 gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/gt/
 
 [SPLIT]
@@ -18,8 +19,9 @@ percent_ratio = 80
 [TRAIN]
 train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/train/img/
 train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/train/gt/
-pretrain_model_path = ../pretrain/craft_mlt_25k.pth
+pretrain_model_path = ../pretrain/model/craft_mlt_25k_630.pth
 cuda = True
+cuda_ids = 0
 resume =
 batch_size = 10
 learning_rate = 3.2768e-5
@@ -30,11 +32,12 @@ num_workers = 0     ### 0보다 크면 멈춤
 model_root_path = ../pretrain/
 
 [TEST]
-pretrain_model_path = ../pretrain/craft_mlt_25k.pth
+pretrain_model_path = ../pretrain/model/craft_mlt_25k_630.pth
 dataset_type = mathflat
 # mathflat / ic15
 test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/test/img/
 test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/test/gt/
 cuda = True
+cuda_ids = 0
 model_root_path = ../pretrain/
 rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V2/0_9999/rst/
