--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -4,24 +4,28 @@ prefix = CRAFT-LEARN.
 folder = Log
 
 [GENERATE]
-img_path = /HDD/mathflat_problems/0_9999/img/
-ann_path = /HDD/mathflat_problems/0_9999/ann/
-gt_path = /HDD/mathflat_problems/0_9999/gt/
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/img/
+ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/ann/
+
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/craft_gt/
 
 [SPLIT]
-img_path = /HDD/mathflat_problems/0_9999/img/
-gt_path = /HDD/mathflat_problems/0_9999/gt/
-train_path = /HDD/mathflat_problems/0_9999/train/
-test_path = /HDD/mathflat_problems/0_9999/test/
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/img/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/craft_gt/
+train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/train/
+test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/test/
 percent_ratio = 80
 
 [TRAIN]
-train_img_path = /HDD/mathflat_problems/0_9999/train/img/
-train_gt_path = /HDD/mathflat_problems/0_9999/train/gt/
-pretrain_model_path = ../pretrain/craft_mlt_25k.pth
+train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/train/img/
+train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/train/craft_gt/
+
+pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150.pth
+
 cuda = True
+cuda_ids = 0
 resume =
-batch_size = 10
+batch_size = 12
 learning_rate = 3.2768e-5
 momentum = 0.9
 weight_decay = 5e-4
@@ -30,8 +34,12 @@ num_workers = 0     ### 0보다 크면 멈춤
 model_root_path = ../pretrain/
 
 [TEST]
-pretrain_model_path = ./pretrain/craft_mlt_25k.pth
-test_img_path = /HDD/mathflat_problems/0_9999/test/img/
-test_gt_path = /HDD/mathflat_problems/0_9999/test/gt/
+pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100.pth
+dataset_type = mathflat
+# mathflat / ic15
+test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/test/img/
+test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/test/craft_gt/
 cuda = True
+cuda_ids = 0
 model_root_path = ../pretrain/
+rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/rst/
