--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -4,21 +4,27 @@ prefix = CRAFT-LEARN.
 folder = Log
 
 [GENERATE]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/img/
-ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/ann/
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/img/
+ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/ann/
 
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/craft_gt/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/craft_gt/
 
 [SPLIT]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/img/
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/craft_gt/
-train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/train/
-test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/test/
-percent_ratio = 80
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/img/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/craft_gt/
+train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/train/
+test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/test/
+
+train_ratio = 0.8
+
+[MERGE]
+dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
+
+total_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/
 
 [TRAIN]
-train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/train/img/
-train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/train/craft_gt/
+train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/train/img/
+train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/train/craft_gt/
 
 pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150.pth
 
@@ -37,9 +43,9 @@ model_root_path = ../pretrain/
 pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100.pth
 dataset_type = mathflat
 # mathflat / ic15
-test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/test/img/
-test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/test/craft_gt/
+test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/test/img/
+test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/test/craft_gt/
 cuda = True
 cuda_ids = 0
 model_root_path = ../pretrain/
-rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3/0_9999/rst/
+rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/rst/
