--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -23,13 +23,13 @@ dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
 total_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/
 
 [TRAIN]
-train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/train/img/
-train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/train/craft_gt/
+train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/train/img/
+train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/train/craft_gt/
 
-pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150.pth
+pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150_150.pth
 
 cuda = True
-cuda_ids = 0
+cuda_ids = 1
 resume =
 batch_size = 10
 learning_rate = 3.2768e-5
@@ -40,7 +40,7 @@ num_workers = 0     ### 0보다 크면 멈춤
 model_root_path = ../pretrain/
 
 [TEST]
-pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100.pth
+pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150_150.pth
 dataset_type = mathflat
 # mathflat / ic15
 test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/test/img/
