--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -4,16 +4,16 @@ prefix = CRAFT-LEARN.
 folder = Log
 
 [GENERATE]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/img/
-ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/ann/
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/img/
+ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/ann/
 
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/craft_gt/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/craft_gt/
 
 [SPLIT]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/img/
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/craft_gt/
-train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/train/
-test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/150000_159999/test/
+img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/img/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/craft_gt/
+train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/train/
+test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/test/
 
 train_ratio = 0.8
 
@@ -43,9 +43,9 @@ model_root_path = ../pretrain/
 pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150_150.pth
 dataset_type = mathflat
 # mathflat / ic15
-test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/test/img/
-test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/test/craft_gt/
+test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/test/img/
+test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/test/craft_gt/
 cuda = True
 cuda_ids = 0
 model_root_path = ../pretrain/
-rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/100000_109999/rst/
+rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/rst/
