--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -23,15 +23,15 @@ dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
 total_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/
 
 [TRAIN]
-train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/train/img/
-train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/train/craft_gt/
+train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/train/img/
+train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/train/craft_gt/
 
-pretrain_model_path = ../pretrain/model/craft_mathflat_30k_150.pth
+pretrain_model_path = ../pretrain/craft_mathflat_30k_150_50.pth
 
 cuda = True
-cuda_ids = 1
+cuda_ids = 0
 resume =
-batch_size = 10
+batch_size = 2
 learning_rate = 3.2768e-5
 momentum = 0.9
 weight_decay = 5e-4
@@ -50,3 +50,11 @@ cuda_ids = 0
 model_root_path = ../pretrain/
 rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/rst/
 
+[SPLIT_TEXTLINE]
+dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
+
+# pretrain_model_path = ../pretrain/craft_mathflat_30k_150_50.pth
+pretrain_model_path = ../pretrain/craft_mlt_25k.pth
+cuda = True
+cuda_ids = 1
+ocr_ini_fname       = ../easyocr/easyocr.ini
