--- a/craft_learn/craft_learn_math.ini
+++ b/craft_learn/craft_learn_math.ini
@@ -7,11 +7,11 @@ folder = Log
 img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/img/
 ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/ann/
 
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/craft_ko_gt/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/craft_math_gt/
 
 [SPLIT]
 img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/img/
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/craft_ko_gt/
+gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/craft_math_gt/
 train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/train/
 test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/test/
 
@@ -24,10 +24,9 @@ total_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/tot
 
 [TRAIN]
 train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/train/img/
-train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/train/craft_ko_gt/
+train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/train/craft_math_gt/
 
 pretrain_model_path = ../pretrain/craft_mathflat_30k_150_50.pth
-# pretrain_model_path =
 
 cuda = True
 cuda_ids = 0
@@ -39,17 +38,17 @@ momentum = 0.9
 weight_decay = 5e-4
 gamma = 0.1
 num_workers = 0     ### 0보다 크면 멈춤
-model_root_path = ../pretrain/ko/
+model_root_path = ../pretrain/math/
 
 [TEST]
 pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150_150.pth
 dataset_type = mathflat
 # mathflat / ic15
 test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/test/img/
-test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/test/craft_ko_gt/
+test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/test/craft_math_gt/
 cuda = True
 cuda_ids = 0
-model_root_path = ../pretrain/ko/
+model_root_path = ../pretrain/math/
 rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/rst/
 
 [SPLIT_TEXTLINE]
