craft_learn.py, craft_learn.ini, craft_learn_ko.ini, craft_learn_math.ini, train.py : refactorying general_utils.py : add get_model_dir()

--- a/craft_learn/craft_learn_math.ini
+++ b/craft_learn/craft_learn_math.ini
@@ -3,59 +3,59 @@ name   = CRAFT-LEARN
 prefix = CRAFT-LEARN.
 folder = Log
 
-[GENERATE]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/img/
-ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/ann/
+[COMMON]
+# CROHME / 20K / MATHFLAT
+dataset_type = MATHFLAT
+dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
+tgt_dir_name = 20000_29999
+base_dir_name = craft_math_gt
+tgt_class = math
+# only math
 
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/craft_math_gt/
+[GENERATE]
+img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
+ann_path = {DATASET_PATH}/{TGT_DIR_NAME}/ann/
+
+gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/{BASE_DIR_NAME}/
 
 [SPLIT]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/img/
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/craft_math_gt/
-train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/train/
-test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/test/
+img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
+gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/{BASE_DIR_NAME}/
+train_path = {DATASET_PATH}/{TGT_DIR_NAME}/train/
+test_path = {DATASET_PATH}/{TGT_DIR_NAME}/test/
 
 train_ratio = 0.8
 
 [MERGE]
-dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
+dataset_path = {DATASET_PATH}/
 
-total_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/total/
+total_dataset_path = {DATASET_PATH}/total/
 
 [TRAIN]
-train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/train/img/
-train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/train/craft_math_gt/
+train_img_path = {DATASET_PATH}/total/train/img/
+train_gt_path = {DATASET_PATH}/total/train/{BASE_DIR_NAME}/
 
-pretrain_model_path = ../pretrain/craft_mathflat_30k_150_50.pth
+root_model_path = ../pretrain/{TGT_CLASS}/
+resume =
 
 cuda = True
 cuda_ids = 0
-resume =
-valid_epoch = 10
+
+valid_epoch = 20
 batch_size = 2
 learning_rate = 3.2768e-5
 momentum = 0.9
 weight_decay = 5e-4
 gamma = 0.1
 num_workers = 0     ### 0보다 크면 멈춤
-model_root_path = ../pretrain/math/
 
 [TEST]
-pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150_150.pth
-dataset_type = mathflat
-# mathflat / ic15
-test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/test/img/
-test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/test/craft_math_gt/
+test_img_path = {DATASET_PATH}/total/test/img/
+test_gt_path = {DATASET_PATH}/total/test/{BASE_DIR_NAME}/
+
+root_model_path = ../pretrain/{TGT_CLASS}/
+
 cuda = True
 cuda_ids = 0
-model_root_path = ../pretrain/math/
-rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/20000_29999/rst/
 
-[SPLIT_TEXTLINE]
-dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
-
-# pretrain_model_path = ../pretrain/craft_mathflat_30k_150_50.pth
-pretrain_model_path = ../pretrain/craft_mlt_25k.pth
-cuda = True
-cuda_ids = 1
-ocr_ini_fname       = ../easyocr/easyocr.ini
+rst_path = ../result/
