--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -3,30 +3,39 @@ name   = CRAFT-LEARN
 prefix = CRAFT-LEARN.
 folder = Log
 
-[GENERATE]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/img/
-ann_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/ann/
+[COMMON]
+# CROHME / 20K / MATHFLAT
+dataset_type = MATHFLAT
+dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
+tgt_dir_name = 20000_29999
+base_dir_name = craft_gt
+tgt_class = textline
+# ko / math / textline
 
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/craft_gt/
+[GENERATE]
+img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
+ann_path = {DATASET_PATH}/{TGT_DIR_NAME}/ann/
+
+gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/craft_gt/
 
 [SPLIT]
-img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/img/
-gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/craft_gt/
-train_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/train/
-test_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/test/
+img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
+gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/craft_gt/
+train_path = {DATASET_PATH}/{TGT_DIR_NAME}/train/
+test_path = {DATASET_PATH}/{TGT_DIR_NAME}/test/
 
 train_ratio = 0.8
 
 [MERGE]
-dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
+dataset_path = {DATASET_PATH}/
 
-total_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/total/
+total_dataset_path = {DATASET_PATH}/total/
 
 [TRAIN]
-train_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/train/img/
-train_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/0_9999/train/craft_gt/
+train_img_path = {DATASET_PATH}/total/train/img/
+train_gt_path = {DATASET_PATH}/total/train/craft_gt/
 
-pretrain_model_path = ../pretrain/craft_mathflat_30k_150_50.pth
+root_model_path = ../pretrain/{TGT_CLASS}/
 
 cuda = True
 cuda_ids = 0
@@ -37,24 +46,24 @@ momentum = 0.9
 weight_decay = 5e-4
 gamma = 0.1
 num_workers = 0     ### 0보다 크면 멈춤
-model_root_path = ../pretrain/
 
 [TEST]
-pretrain_model_path = ../pretrain/model/craft_mlt_25k_630_100_150_150.pth
-dataset_type = mathflat
-# mathflat / ic15
-test_img_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/test/img/
-test_gt_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/test/craft_gt/
+test_img_path = {DATASET_PATH}/total/test/img/
+test_gt_path = {DATASET_PATH}/total/test/craft_gt/
+
+root_model_path = ../pretrain/{TGT_CLASS}/
+
 cuda = True
 cuda_ids = 0
-model_root_path = ../pretrain/
-rst_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/10000_19999/rst/
+
+rst_path = ../result/
 
 [SPLIT_TEXTLINE]
-dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
+dataset_path = {DATASET_PATH}/
 
-# pretrain_model_path = ../pretrain/craft_mathflat_30k_150_50.pth
-pretrain_model_path = ../pretrain/craft_mlt_25k.pth
+ko_model_path = ../pretrain/ko/
+math_model_path = ../pretrain/math/
+
 cuda = True
 cuda_ids = 1
 ocr_ini_fname       = ../easyocr/easyocr.ini
