--- a/craft_learn/craft_learn_math.ini
+++ b/craft_learn/craft_learn_math.ini
@@ -7,7 +7,7 @@ folder = Log
 # CROHME / 20K / MATHFLAT
 dataset_type = MATHFLAT
 dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
-tgt_dir_name = 20000_29999
+tgt_dir_name = 170000_179999
 base_dir_name = craft_math_gt
 tgt_class = math
 # only math
@@ -24,7 +24,7 @@ gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/{BASE_DIR_NAME}/
 train_path = {DATASET_PATH}/{TGT_DIR_NAME}/train/
 test_path = {DATASET_PATH}/{TGT_DIR_NAME}/test/
 
-train_ratio = 0.8
+train_ratio = 0.99
 
 [MERGE]
 dataset_path = {DATASET_PATH}/
@@ -36,13 +36,14 @@ train_img_path = {DATASET_PATH}/total/train/img/
 train_gt_path = {DATASET_PATH}/total/train/{BASE_DIR_NAME}/
 
 root_model_path = ../pretrain/{TGT_CLASS}/
+model_name = craft_mathflat_30k_150_50_160.pth
 resume =
 
 cuda = True
-cuda_ids = 0
+cuda_ids = 1
 
 valid_epoch = 20
-batch_size = 2
+batch_size = 6
 learning_rate = 3.2768e-5
 momentum = 0.9
 weight_decay = 5e-4
