create main_split_textline() prototype

--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -6,7 +6,9 @@ folder = Log
 [COMMON]
 # CROHME / 20K / MATHFLAT
 dataset_type = MATHFLAT
+textline_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
 dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
+except_dir_names = 20000_29999, 60000_69999, 120000_129999, 170000_179999
 tgt_dir_name = 20000_29999
 base_dir_name = craft_gt
 tgt_class = textline
@@ -59,10 +61,18 @@ cuda_ids = 0
 rst_path = ../result/
 
 [SPLIT_TEXTLINE]
-dataset_path = {DATASET_PATH}/
+
+textline_dataset_path = {TEXTLINE_DATASET_PATH}/
+
+refine_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4/
+rst_path = ../result/
+
+link_ = False
 
 ko_model_path = ../pretrain/ko/
 math_model_path = ../pretrain/math/
+model_name = craft_mathflat_30k_150_50.pth
+# lower_loss.pth
 
 cuda = True
 cuda_ids = 1
