craft_learn.py, craft_learn.ini : verify box refinement routine. easyocr_textline.ini : add file for split_textline()

--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -67,13 +67,19 @@ textline_dataset_path = {TEXTLINE_DATASET_PATH}/
 refine_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4/
 rst_path = ../result/
 
+img_mode = normal
+# normal / crop
 link_ = False
+border_ = False
+save_detect_box_img_ = True
+save_refine_box_img_ = True
 
 ko_model_path = ../pretrain/ko/
 math_model_path = ../pretrain/math/
-model_name = craft_mathflat_30k_150_50.pth
+ko_model_name = craft_mathflat_30k_150_50_160_340.pth
+math_model_name = craft_mathflat_30k_150_50_160_300.pth
 # lower_loss.pth
 
 cuda = True
 cuda_ids = 1
-ocr_ini_fname       = ../easyocr/easyocr.ini
+ocr_ini_fname       = ../easyocr/easyocr_textline.ini
