--- a/CRAFT-Reimplementation_CUDA11.yml
+++ b/CRAFT-Reimplementation_CUDA11.yml
@@ -186,5 +186,6 @@ dependencies:
     - urllib3==1.26.5
     - websocket-client==1.0.1
     - werkzeug==2.0.1
+    - Polygon3
     - git+https://github.com/mathFLAT/python_utils.git
 prefix: /home/motive/anaconda3/envs/CRAFT-Reimplementation
