--- a/CRAFT-Reimplementation_CUDA11.yml
+++ b/CRAFT-Reimplementation_CUDA11.yml
@@ -188,4 +188,5 @@ dependencies:
     - werkzeug==2.0.1
     - Polygon3
     - git+https://github.com/mathFLAT/python_utils.git
+    - git+https://github.com/ai-motive/supervisely.git
 prefix: /home/motive/anaconda3/envs/CRAFT-Reimplementation
