craft_learn.ini :  - add copy_ routine  - refine_dataset_path : V4 -> V4.1
 craft_learn.py : add link, copy routine

--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -64,19 +64,21 @@ rst_path = ../result/
 
 textline_dataset_path = {TEXTLINE_DATASET_PATH}/
 
-refine_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4/
+refine_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
 rst_path = ../result/
 
 img_mode = normal
 # normal / crop
-link_ = False
+link_ = True
+copy_ = True
+
 border_ = False
 save_detect_box_img_ = True
 save_refine_box_img_ = True
 
 ko_model_path = ../pretrain/ko/
 math_model_path = ../pretrain/math/
-ko_model_name = craft_mathflat_30k_150_50_160_340.pth
+ko_model_name = lower_loss.pth
 math_model_name = craft_mathflat_30k_150_50_160_300.pth
 # lower_loss.pth
 
