craft_learn.ini : modify ko, math model path craft_learn.py : Remove textline object

--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -78,8 +78,8 @@ save_refine_box_img_ = True
 
 ko_model_path = ../pretrain/ko/
 math_model_path = ../pretrain/math/
-ko_model_name = lower_loss.pth
-math_model_name = craft_mathflat_30k_150_50_160_300.pth
+ko_model_name = craft_mathflat_30k_150_50_160_640_80.pth
+math_model_name = craft_mathflat_30k_150_50_160_540_60.pth
 # lower_loss.pth
 
 cuda = True
