craft_learn.ini : tgt_class - textline => TEXTLINE craft_learn_ko.ini : tgt_class - ko => KO craft_learn_math.ini : tgt_class - math => MATH craft_learn.py : modify hard code

--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -11,8 +11,8 @@ dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
 except_dir_names = 20000_29999, 60000_69999, 120000_129999, 170000_179999
 tgt_dir_name = 170000_179999
 base_dir_name = craft_gt
-tgt_class = textline
-# ko / math / textline
+tgt_class = TEXTLINE
+# KO / MATH / TEXTLINE
 
 [GENERATE]
 img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
