--- a/craft_learn/craft_learn_ko.ini
+++ b/craft_learn/craft_learn_ko.ini
@@ -10,8 +10,8 @@ dataset_type = KO
 dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
 tgt_dir_name = 170000_179999
 base_dir_name = craft_ko_gt
-tgt_class = ko
-# only ko
+tgt_class = KO
+# only KO
 
 [PREPROCESS_ALL]
 tgt_dir_names = 20000_29999, 60000_69999, 120000_129999, 170000_179999
