craft_learn.ini : modify detect. model_path craft_learn.py : add image coord. adjusting routine

--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -61,7 +61,7 @@ cuda_ids = 0
 rst_path = ../result/
 
 [SPLIT_TEXTLINE]
-except_dir_names = 20000_29999, 60000_69999, 120000_129999, 170000_179999
+except_dir_names = 10000_19999, 20000_29999, 60000_69999, 120000_129999, 170000_179999
 
 textline_dataset_path = {TEXTLINE_DATASET_PATH}/
 
@@ -79,8 +79,8 @@ save_refine_box_img_ = True
 
 ko_model_path = ../pretrain/ko/
 math_model_path = ../pretrain/math/
-ko_model_name = craft_mathflat_30k_150_50_160_640_140.pth
-math_model_name = craft_mathflat_30k_150_50_160_540_100.pth
+ko_model_name = craft_mathflat_30k_150_50_160_640_180.pth
+math_model_name = craft_mathflat_30k_150_50_160_540_140.pth
 # lower_loss.pth
 
 cuda = True
