update except_dir_names and code

--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -61,7 +61,7 @@ cuda_ids = 0
 rst_path = ../result/
 
 [SPLIT_TEXTLINE]
-except_dir_names = 0_9999, 10000_19999, 20000_29999, 60000_69999, 120000_129999, 170000_179999, total
+except_dir_names = 0_9999, 10000_19999, 20000_29999, 50000_59999, 60000_69999, 100000_109999, 110000_119999, 120000_129999, 150000_159999, 160000_169999, 170000_179999, total
 
 textline_dataset_path = {TEXTLINE_DATASET_PATH}/
 
