--- a/craft_learn/craft_learn.ini
+++ b/craft_learn/craft_learn.ini
@@ -9,7 +9,7 @@ dataset_type = MATHFLAT
 textline_dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V3.1/
 dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
 
-tgt_dir_name = 170000_179999
+tgt_dir_name = 0_9999, 10000_19999
 base_dir_name = craft_gt
 tgt_class = TEXTLINE
 # KO / MATH / TEXTLINE
@@ -26,7 +26,7 @@ gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/craft_gt/
 train_path = {DATASET_PATH}/{TGT_DIR_NAME}/train/
 test_path = {DATASET_PATH}/{TGT_DIR_NAME}/test/
 
-train_ratio = 0.99
+train_ratio = 0.8
 
 [MERGE]
 dataset_path = {DATASET_PATH}/
