--- a/craft_learn/craft_learn_ko.ini
+++ b/craft_learn/craft_learn_ko.ini
@@ -10,11 +10,11 @@ dataset_type = KO
 dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
 tgt_dir_name = 170000_179999
 base_dir_name = craft_ko_gt
-tgt_class = KO
-# only KO
+tgt_class = ko
+# only ko
 
 [PREPROCESS_ALL]
-tgt_dir_names = 20000_29999, 60000_69999, 120000_129999, 170000_179999
+tgt_dir_names = 0_9999, 10000_19999, 20000_29999, 60000_69999, 120000_129999, 170000_179999
 
 [GENERATE]
 img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
@@ -26,7 +26,7 @@ gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/{BASE_DIR_NAME}/
 img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
 gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/{BASE_DIR_NAME}/
 
-train_ratio = 0.99
+train_ratio = 0.8
 
 train_path = {DATASET_PATH}/{TGT_DIR_NAME}/train/
 test_path = {DATASET_PATH}/{TGT_DIR_NAME}/test/
@@ -41,7 +41,7 @@ train_img_path = {DATASET_PATH}/total/train/img/
 train_gt_path = {DATASET_PATH}/total/train/{BASE_DIR_NAME}/
 
 root_model_path = ../pretrain/{TGT_CLASS}/
-model_name = craft_mathflat_30k_150_50_160_640.pth
+model_name = craft_mathflat_30k_150_50_160_640_260.pth
 resume =
 
 cuda = True
