--- a/craft_learn/craft_learn_math.ini
+++ b/craft_learn/craft_learn_math.ini
@@ -10,11 +10,11 @@ dataset_type = MATH
 dataset_path = /HDD/Datasets/mathflat_problems/Output_supervisely_V4.1/
 tgt_dir_name = 170000_179999
 base_dir_name = craft_math_gt
-tgt_class = MATH
-# only MATH
+tgt_class = math
+# only math
 
 [PREPROCESS_ALL]
-tgt_dir_names = 20000_29999, 60000_69999, 120000_129999, 170000_179999
+tgt_dir_names = 0_9999, 10000_19999, 20000_29999, 60000_69999, 120000_129999, 170000_179999
 
 [GENERATE]
 img_path = {DATASET_PATH}/{TGT_DIR_NAME}/img/
@@ -28,7 +28,7 @@ gt_path = {DATASET_PATH}/{TGT_DIR_NAME}/{BASE_DIR_NAME}/
 train_path = {DATASET_PATH}/{TGT_DIR_NAME}/train/
 test_path = {DATASET_PATH}/{TGT_DIR_NAME}/test/
 
-train_ratio = 0.99
+train_ratio = 0.8
 
 [MERGE]
 dataset_path = {DATASET_PATH}/
@@ -40,7 +40,7 @@ train_img_path = {DATASET_PATH}/total/train/img/
 train_gt_path = {DATASET_PATH}/total/train/{BASE_DIR_NAME}/
 
 root_model_path = ../pretrain/{TGT_CLASS}/
-model_name = craft_mathflat_30k_150_50_160_540.pth
+model_name = craft_mathflat_30k_150_50_160_540_200.pth
 resume =
 
 cuda = True
